# PcCoach

./: .gitignore  CLAUDE.md  DATABASE.md  Makefile  PLAN.md  README.md  TO-DO.md  docker-compose.dev.yml  docker-compose.yml  init.sh  orchestrator.py  requests.http  review.md
backend/: .env.example  CLAUDE.md  Dockerfile  Dockerfile.dev  SECURITY_AUDIT.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_component_catalog.py  0003_add_normalized_model.py
backend/app/: config.py  database.py  limiter.py  main.py
backend/app/adapters/: catalog_adapter.py
backend/app/db/: all_products.json  models.py  seed.py
backend/app/models/: booking.py  builder.py
backend/app/prompts/: manager.py  search.yaml
backend/app/security/: blocklist.py  events.py  guardrails.py  output_guard.py  prompt_guard.py
backend/app/services/: build_validator.py  candidate_filter.py  catalog.py  claude.py  (+1 more)
backend/tests/: test_build_validator.py  test_builder_api.py  test_candidate_filter.py  test_catalog.py  test_filter_edge_cases.py  test_filter_simulation.py  test_format_candidates.py  test_guardrails.py  test_models.py  test_seed.py  test_tool_loop.py
engine/: CLAUDE.md  __init__.py  ports.py  pyproject.toml
engine/config/: hardware_tiers.yaml  loader.py  profiles.yaml
engine/core/: dedup.py  families.py  notes_parser.py  optimizer.py  scorer.py  selector.py  validator.py
engine/models/: result.py  types.py
engine/tests/: conftest.py  test_dedup.py  test_families.py  test_integration.py  test_notes_parser.py  test_optimizer.py  test_profiles.py  test_scorer.py  test_selector.py
(+54 files in other folders)
