[project]
name = "pccoach-engine"
version = "0.1.0"
description = "Deterministic PC build selection engine for PcCoach"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
